--- a/404.md
+++ b/404.md
@@ -1,2 +1,16 @@
-#  ¿De que estás hablando? :thinking:
+#  Creo que ha occurido un error...
+
+No pudimos encontrar la página que estabas buscando. Asegurate de que:
+
+* la dirección web está bien escrita.
+* la página no fue eliminada o movida a otro lugar.
+* la página en realidad existe.
+
+Si crees que esto es un error, contacta a un miembro del equipo administrativo.
+
+```
+[Información técnica del error]
+* Código de error: Error 404
+* Descripción del error: No se pudo encontrar la página
+```
 
