--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 #  Creo que ha occurido un error...
 
-No pudimos encontrar la página que estabas buscando. Asegurate de que:
+No pudimos encontrar la página que estabas buscando. Asegúrate de que:
 
 * la dirección web está bien escrita.
 * la página no fue eliminada o movida a otro lugar.
